<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BCA_Login">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/tmu_logo_pi"
        android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="24dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BCA Login"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/enter_your_email_"
                android:textStyle="bold"
                android:textSize="16sp" />




            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_username_bca"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:hint="@string/email_"
                android:drawablePadding="8dp"
                android:textColor="#a2a4b5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/enter_your_password"
                android:textStyle="bold"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password_bca"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
           <!-- <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_marginTop="12dp"
                android:textAlignment="viewEnd"
                android:layout_marginEnd="12dp"/>-->

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_"
                android:textStyle="bold"
                android:id="@+id/login_button"
                android:onClick="Login_Student"
                android:textSize="18sp"
                android:textColor="#451212"
                android:backgroundTint="#F17A55"
                android:layout_marginTop="20dp"
                app:cornerRadius ="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account_"
                    android:onClick="Register_bca"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:padding="8dp"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/bca_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Register"
                    android:onClick="Register_bca"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:padding="8dp"
                    android:textSize="16sp"
                    />
            </LinearLayout>


           <!-- <com.google.android.gms.common.SignInButton
                android:id="@+id/bt_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                />-->

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>