<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BCA_Registration">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/tmu_logo_pi"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="20dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:padding="24dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="BCA Registration"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginBottom="20dp"
                    android:textSize="33sp"
                    android:textStyle="bold"/>



                <EditText
                    android:id="@+id/Reg_email_bca"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:padding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/Reg_pass_bca"
                    android:layout_width="304dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/password_"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/Reconfirm_pass_bca"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:padding="8dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/Reg_but"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/register"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#F17A55"
                    android:textColor="#451212"
                    app:cornerRadius ="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/loginRedirectText"
                        android:text="Already have an account"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/goto_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login__"
                        android:onClick="Login_BCA"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        />

                </LinearLayout>


                <!--<com.google.android.gms.common.SignInButton
                    android:id="@+id/bt_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp" />-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</LinearLayout>